# rust-hexagonal-architecture

./: Cargo.toml  README.md
data/poems/: b970587a-e649-4b96-8a3b-adbc93ad9c33.json
src/: application.rs  domain.rs  infrastructure.rs  main.rs  repositories.rs  tests.rs
src/application/adapters/console/: console_app.rs  types.rs
src/application/adapters/console/actions/: find_poem_by_author_id.rs  find_poem_by_id.rs  find_poem_by_title.rs
src/application/interfaces/: single_action_controller.rs
src/common/: logger.rs
src/domain/entities/: poem.rs
src/domain/services/: poems_service.rs
src/infrastructure/persistence/file_system/: poems_in_file_system.rs  poems_loader.rs
src/repositories/: poems_repository.rs
src/tests/application/adapters/console/: console_app_tests.rs
src/tests/domain/entities/: poem_tests.rs
src/tests/domain/services/: poems_service_tests.rs
src/tests/infrastructure/persistence/file_system/: poems_in_file_system_tests.rs
src/tests/mock/: mock_logger.rs  mock_poem.rs  mock_poems_loader.rs  mock_poems_repository.rs
