[package]
name = "tp-hexagone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.114"
mockall = "0.12.1"
mockall_double = "0.3.1"
